CapStone_Tennis.ipynb

--- a/CapStone_Tennis.ipynb
+++ b/CapStone_Tennis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,38 +19,38 @@
      "text": [
       "\u001b[2K\n",
       "\u001b[2K\n",
-      "Ultralytics 8.3.29 🚀 Python-3.10.2 torch-2.1.2+cpu CPU (Intel Core(TM) i3-8145U 2.10GHz)\n",
-      "Setup complete ✅ (4 CPUs, 7.9 GB RAM, 367.0/1816.4 GB disk)\n",
+      "Ultralytics 8.3.40 🚀 Python-3.8.20 torch-1.9.0+cpu CPU (Intel Core(TM) i3-8145U 2.10GHz)\n",
+      "Setup complete ✅ (4 CPUs, 7.9 GB RAM, 216.9/221.8 GB disk)\n",
       "\n",
       "OS                  Windows-10-10.0.19045-SP0\n",
       "Environment         Windows\n",
-      "Python              3.10.2\n",
+      "Python              3.8.20\n",
       "Install             pip\n",
       "RAM                 7.90 GB\n",
-      "Disk                367.0/1816.4 GB\n",
+      "Disk                216.9/221.8 GB\n",
       "CPU                 Intel Core(TM) i3-8145U 2.10GHz\n",
       "CPU count           4\n",
       "GPU                 None\n",
       "GPU count           None\n",
       "CUDA                None\n",
       "\n",
-      "numpy               ✅ 1.26.1>=1.23.0\n",
-      "matplotlib          ✅ 3.8.1>=3.3.0\n",
-      "opencv-python       ✅ 4.9.0.80>=4.6.0\n",
-      "pillow              ✅ 10.1.0>=7.1.2\n",
-      "pyyaml              ✅ 6.0.1>=5.3.1\n",
-      "requests            ✅ 2.31.0>=2.23.0\n",
-      "scipy               ✅ 1.13.0>=1.4.1\n",
-      "torch               ✅ 2.1.2>=1.8.0\n",
-      "torchvision         ✅ 0.16.2>=0.9.0\n",
-      "tqdm                ✅ 4.66.1>=4.64.0\n",
-      "psutil              ✅ 5.9.5\n",
+      "numpy               ✅ 1.24.3>=1.23.0\n",
+      "numpy               ✅ 1.24.3<2.0.0; sys_platform == \"darwin\"\n",
+      "matplotlib          ✅ 3.7.5>=3.3.0\n",
+      "opencv-python       ✅ 4.10.0.84>=4.6.0\n",
+      "pillow              ✅ 10.4.0>=7.1.2\n",
+      "pyyaml              ✅ 6.0.2>=5.3.1\n",
+      "requests            ✅ 2.32.3>=2.23.0\n",
+      "scipy               ✅ 1.10.1>=1.4.1\n",
+      "torch               ✅ 1.9.0+cpu>=1.8.0\n",
+      "torch               ✅ 1.9.0+cpu!=2.4.0,>=1.8.0; sys_platform == \"win32\"\n",
+      "torchvision         ✅ 0.10.0+cpu>=0.9.0\n",
+      "tqdm                ✅ 4.67.0>=4.64.0\n",
+      "psutil              ✅ 6.0.0\n",
       "py-cpuinfo          ✅ 9.0.0\n",
-      "pandas              ✅ 2.1.1>=1.1.4\n",
+      "pandas              ✅ 2.0.3>=1.1.4\n",
       "seaborn             ✅ 0.13.2>=0.11.0\n",
-      "ultralytics-thop    ✅ 2.0.0>=2.0.0\n",
-      "numpy               ✅ 1.26.1<2.0.0; sys_platform == \"darwin\"\n",
-      "torch               ✅ 2.1.2!=2.4.0,>=1.8.0; sys_platform == \"win32\"\n"
+      "ultralytics-thop    ✅ 2.0.12>=2.0.0\n"
      ]
     }
    ],
@@ -62,6 +62,42 @@
     "from ultralytics import YOLO\n",
     "\n",
     "!yolo checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import os\n",
+    "\n",
+    "# 비디오 파일 경로 설정\n",
+    "video_path = r'D:/Tennis_Video/Tennis_MP4_5.mp4'\n",
+    "output_folder = r'D:/Tennis_Video/Frames'\n",
+    "\n",
+    "# 프레임을 저장할 폴더 생성\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "# 비디오 파일 열기\n",
+    "cap = cv2.VideoCapture(video_path)\n",
+    "\n",
+    "frame_count = 0\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "    \n",
+    "    # 각 프레임을 JPG 파일로 저장\n",
+    "    frame_filename = os.path.join(output_folder, f'frame_{frame_count:04d}.jpg')\n",
+    "    cv2.imwrite(frame_filename, frame)\n",
+    "    \n",
+    "    frame_count += 1\n",
+    "\n",
+    "cap.release()\n",
+    "print(f\"Total frames saved: {frame_count}\")\n"
    ]
   },
   {
